--- a/MinTicContruyeLegal/package.json
+++ b/MinTicContruyeLegal/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^10.0.0",
     "excel4node": "^1.2.1",
     "express": "^4.17.1",
+    "firebase-admin": "^10.0.0",
     "http-errors": "^1.8.0"
   }
 }
