--- a/MinTicConstruyeLegal/package.json
+++ b/MinTicConstruyeLegal/package.json
@@ -1,5 +1,22 @@
 {
+  "name": "minticconstruyelegal",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^10.0.0"
+    "debug": "^4.3.2",
+    "dotenv": "^10.0.0",
+    "excel4node": "^1.7.2",
+    "express": "^4.17.1",
+    "http-errors": "^1.8.0"
+  },
+  "scripts": {
+    "dev": "set DEBUG=app:* && nodemon index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
