--- a/MinTicConstruyeLegal/package.json
+++ b/MinTicConstruyeLegal/package.json
@@ -6,9 +6,11 @@
   "dependencies": {
     "debug": "^4.3.2",
     "dotenv": "^10.0.0",
-    "excel4node": "^1.7.2",
+    "excel4node": "^1.2.1",
     "express": "^4.17.1",
-    "http-errors": "^1.8.0"
+    "firebase-admin": "^10.0.0",
+    "http-errors": "^1.8.0",
+    "nodemailer-smtp-transport": "^2.4.2"
   },
   "scripts": {
     "dev": "set DEBUG=app:* && nodemon index.js"
