--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,20 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python,django,node,windows,linux,macos,emacs
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,django,node,windows,linux,macos,emacs
 
+
+### Firebase ###
+.idea
+**/node_modules/*
+**/.firebaserc
+
+### Firebase Patch ###
+.runtimeconfig.json
+.firebase/
+
+#Key Firebase
+minticconstruyelegal-*.json
+
+
 # User-specific files
 *.rsuser
 *.suo
@@ -13,6 +27,7 @@
 
 # Mono auto generated files
 mono_crash.*
+
 
 # Build results
 [Dd]ebug/
