--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.24.0",
     "debug": "^4.3.2",
     "dotenv": "^10.0.0",
     "excel4node": "^1.2.1",
