--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -7,10 +7,14 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "firebase": "^9.4.1",
     "history": "^5.1.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-router-dom": "^6.0.2"
+    "react-hook-form": "^7.19.5",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.0.2",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.0",
